Adding some sessions

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="content">
           <h2>SOBRE MIM</h2>
           <div class="line"></div>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae possimus dolorem quo, tempora eveniet aspernatur perferendis dolores, est, saepe optio vel dolore at tenetur natus. Accusantium fugit iste unde error.</p>
+          <p>Sou um desenvolvedor fascinado à aprender novas linguagens e frameworks e disposto à encarar novos desafios. Gosto de trabalhar em equipe e espalhar o conhecimento que sei e que adquiri durante o meus estudos e trabalho. </p>
           <h2>EXPERIÊNCIAS</h2>
           <div class="line"></div>
           <ul class="timeline">
@@ -92,7 +92,7 @@
             </li>
           </ul>
             </li>
-          <h2>EDUCAÇÃO</h2>
+          <h2>CURSOS E CERTIFICADOS</h2>
           <div class="line"></div>
           <ul class="timeline">
             <li class="event" data-date="Mar/2021-Jun/2021">
@@ -100,9 +100,22 @@
               <p>Desenvolvedor Web Java Junior</p>
             </li>
             <li class="event" data-date="Ago/2021-Ago/2025">
-                <h3>Universidade Anhembi Morumbi</h3>
-                <p>Ciência da Computação</p>
-              </li>
+              <h3>Universidade Anhembi Morumbi</h3>
+              <p>Ciência da Computação</p>
+            </li>
+          </ul>
+              <h2>FLUÊNCIA EM LÍNGUAS</h2>
+              <div class="line"></div>
+              <ul class="timeline">
+                <li class="event">
+                  <h3>Inglês</h3>
+                  <p>Avançado - Certificação B1 de Cambridge</p>
+                </li>
+                <li class="event">
+                  <h3>Alemão</h3>
+                  <p>Básico</p>
+                </li>
+              </ul>
         </div>
       </div>
 </body>
