Adding some sessions

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="content">
           <h2>SOBRE MIM</h2>
           <div class="line"></div>
-          <p>Sou um desenvolvedor fascinado à aprender novas linguagens e frameworks e disposto à encarar novos desafios. Gosto de trabalhar em equipe e espalhar o conhecimento que sei e que adquiri durante o meus estudos e trabalho. </p>
+          <p>Sou um desenvolvedor fascinado em aprender novas linguagens e frameworks e disposto a encarar novos desafios. Gosto de trabalhar em equipe e espalhar o conhecimento que sei e que adquiri durante os meus estudos e trabalho.</p>
           <h2>EXPERIÊNCIAS</h2>
           <div class="line"></div>
           <ul class="timeline">
